--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=7.1.3",
+        "csanquer/pdo-service-provider": "^1.0",
         "laravel/lumen-framework": "5.8.*"
     },
     "require-dev": {
