--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,9 @@ DB_PASSWORD=secret
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
+QUEUE_DRIVER=database
+
+STATE_INIT='initialized'
+STATE_PENDING='pending'
+STATE_FAILED='failed'
+STATE_COMPLETED='completed'
