--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": ">=7.1.3",
         "csanquer/pdo-service-provider": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
+        "imangazaliev/didom": "^1.14",
         "laravel/lumen-framework": "5.8.*"
     },
     "require-dev": {
